--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
 body {
-<<<<<<< HEAD
-    color: blue;
-=======
-    color: red;
->>>>>>> cabecera
+    background: #1e1f24;
+    color: #333;
     text-align: center;
     font-size: 16px;
     font-family: arial;
+    margin: 0;
+    padding: 0;
 }
 #container{
     width: 70%;
@@ -22,7 +21,7 @@ font-size: 20px;
 }
 
 #cabecera {
-    background: #33A;
+    background: #37488b;
     box-shadow: 0px 2px 20px 0px rgba(0, 0,0,0.5);
     color: white;
     font-weight: bold;
@@ -34,4 +33,14 @@ font-size: 20px;
     padding: 0 0 0 1em;
     font-weight: normal;
     font-size: o.8em;
+}
+
+#cabecera #logo {
+    width: 50px;
+    vertical-align: middle;
+}
+
+#post {
+    background: white;
+    padding: 1em;
 }
