--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,10 @@ font-size: 20px;
     font-weight: normal;
     font-size: o.8em;
 }
+
+#footer{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
